--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aliens-game-React",
+  "name": "react-aliens-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "sass": "^1.83.0"
   },
   "devDependencies": {
